<resources>
    <string name="app_name">Personal Organizer</string>
    <string name="note_name">Название</string>
    <string name="note_description">Описание</string>
    <string name="button_add_text">Добавить</string>
    <string name="button_edit_text">Редактировать</string>
    <string name="button_save_text">Сохранить</string>
    <string name="button_random_text">Показать последнюю заметку</string>
    <string name="noteIndex">noteIndex</string>
    <string name="title_activity_edit_note">EditNoteActivity</string>
    <string name="buttin_show_last_text">Показать последнюю заметку</string>

    <string name="for_blinded_people_next">Следующая заметка</string>
    <string name="for_blinded_people_prev">Предидущая заметка</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>