<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="392dp"
        android:background="#000000"
        android:clickable="false"
        android:orientation="vertical"
        android:rotationX="1"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="0dp"></LinearLayout>

    <TextView
        android:id="@+id/noteDescription"
        android:layout_width="357dp"
        android:layout_height="61dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="88dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/note_description"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addNoteButton"
        android:layout_width="168dp"
        android:layout_height="53dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="160dp"
        android:text="@string/button_add_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="saveNote"/>

    <Button
        android:id="@+id/showNoteButton"
        android:layout_width="353dp"
        android:layout_height="58dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="276dp"
        android:text="@string/buttin_show_last_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/nextNoteImageButton"
        android:layout_width="164dp"
        android:layout_height="51dp"
        android:layout_marginStart="204dp"
        android:layout_marginTop="220dp"
        android:src="@drawable/baseline_arrow_forward_ios_24"
        android:contentDescription="@string/for_blinded_people_next"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/prevNoteImageButton"
        android:layout_width="154dp"
        android:layout_height="51dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="220dp"
        android:src="@drawable/baseline_arrow_back_ios_24"
        android:contentDescription="@string/for_blinded_people_prev"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/editNoteButton"
        android:layout_width="170dp"
        android:layout_height="52dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="160dp"
        android:text="@string/button_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="editNote" />

    <TextView
        android:id="@+id/noteName"
        android:layout_width="353dp"
        android:layout_height="59dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/note_name"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>