<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNoteActivity">

    <EditText
        android:id="@+id/noteName"
        android:layout_width="339dp"
        android:layout_height="54dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="21dp"
        android:text="@string/note_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/noteDescription"
        android:layout_width="338dp"
        android:layout_height="53dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="87dp"
        android:text="@string/note_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addNewNoteButton"
        android:layout_width="334dp"
        android:layout_height="68dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="155dp"
        android:text="@string/button_add_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>